# device-ip-haskell

./: .gitignore  CHANGELOG.md  README.md  deviceip-haskell.cabal
app/: Main.hs
