cabal-version:      2.4
name:               deviceip-haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Mikhail Brinchuk
maintainer:         thecentury@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable deviceip-haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.14.3.0,
        req >=3.13.0,
        aeson >= 2.1.1.0,
        bytestring >= 0.10.12,
        text >= 1.2.4.1,
        HandsomeSoup >= 0.4.2,
        hxt >= 9.3.1.22,
        http-client >= 0.7.13.1,
        cryptohash-sha256 >= 0.11.102.1,
        base64-bytestring >= 1.2.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
